tests/fixtures/invalid/bad-web-server-config-2.yini
// Important: This file consists of 2 errors for testing.

// Section named 'Server'.
^ Server
host = '0.0.0.0'
port = 8080
enable_ssl = falsy            // ERROR: Invalid boolean literal 'falsy'.
log_file = '/var/log/server.log'
max_connections = 200

    // Sub-section 'SSL' of 'Server'.
    ^^ SSL
    enabled = false
    #This hash comment is INVALID, due to it's missing a WS after the hash!
    cert_path = null
    key_path = null
